More diags tests